README: added disclaimer about backwards compatibility

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Evolution Simulator 2d written by Mitchell Koerner
 
 allows creatures and food to interact in an arena with traits to simulate evolution
+
+THIS CODE IS CURRENTLY A WORK IN PROGRESS. NO PROMISES ARE MADE FOR BACKWARDS COMPATIBILITY, THERE WILL BE MANY NON-BACKWARDS COMPATABLE CHANGES WHILE THE FIRST VERSION IS COMPLETED.
